--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,10 +14,8 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imageregister"
-            android:layout_width="@dimen/_120dp"
-            android:layout_height="@dimen/_120dp"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="0dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:layout_marginTop="@dimen/_8dp"
             android:src="@drawable/circle_shape"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -42,8 +40,8 @@
 
                 <ImageView
                     android:id="@+id/imageView5"
-                    android:layout_width="@dimen/_25dp"
-                    android:layout_height="@dimen/_25dp"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
                     android:layout_marginLeft="@dimen/_8dp"
                     android:layout_marginStart="@dimen/_8dp"
                     android:layout_marginTop="@dimen/_16dp"
@@ -53,8 +51,8 @@
 
                 <ImageView
                     android:id="@+id/imageView3"
-                    android:layout_width="@dimen/_25dp"
-                    android:layout_height="@dimen/_25dp"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
                     android:layout_marginLeft="@dimen/_8dp"
                     android:layout_marginStart="@dimen/_8dp"
                     android:layout_marginTop="@dimen/_16dp"
@@ -64,8 +62,8 @@
 
                 <ImageView
                     android:id="@+id/imageView2"
-                    android:layout_width="@dimen/_25dp"
-                    android:layout_height="@dimen/_25dp"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
                     android:layout_marginLeft="@dimen/_8dp"
                     android:layout_marginStart="@dimen/_8dp"
                     android:layout_marginTop="@dimen/_8dp"
@@ -133,19 +131,63 @@
                     android:id="@+id/txtemailregister"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_8dp"
+                    android:layout_marginEnd="@dimen/_8dp"
                     android:layout_marginLeft="@dimen/_8dp"
                     android:layout_marginRight="@dimen/_8dp"
+                    android:layout_marginStart="@dimen/_8dp"
                     android:layout_marginTop="@dimen/_16dp"
                     android:background="@null"
                     android:hint="Email"
                     android:inputType="textEmailAddress"
                     android:textSize="@dimen/_20sp"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toRightOf="@+id/imageView5"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/view6" />
+
+                <View
+                    android:id="@+id/view7"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="@dimen/_8dp"
+                    android:background="@color/tab_enable"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/txtemailregister" />
+
+                <Spinner
+                    android:id="@+id/spinner_countries"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_8dp"
+                    android:layout_marginRight="@dimen/_8dp"
+                    android:layout_marginTop="@dimen/_16dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/view7" />
+
+                <View
+                    android:id="@+id/view8"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="@dimen/_8dp"
+                    android:background="@color/tab_enable"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/spinner_countries" />
+
+                <Spinner
+                    android:id="@+id/spinner_cities"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/_8dp"
+                    android:layout_marginLeft="@dimen/_8dp"
+                    android:layout_marginRight="@dimen/_8dp"
+                    android:layout_marginTop="@dimen/_16dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/view8" />
 
             </android.support.constraint.ConstraintLayout>
 
@@ -154,10 +196,7 @@
         <Button
             android:id="@+id/btn_register"
             android:layout_width="0dp"
-            android:layout_height="@dimen/_75dp"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginTop="0dp"
+            android:layout_height="75dp"
             android:background="@color/colorAccent"
             android:text="Sign Up"
             android:textAllCaps="false"
@@ -171,8 +210,6 @@
             android:id="@+id/txt_or"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="0dp"
             android:layout_marginTop="@dimen/_8dp"
             android:gravity="center"
             android:text="Or"
@@ -187,8 +224,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/_8dp"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="0dp"
             android:layout_marginTop="@dimen/_8dp"
             android:textSize="@dimen/_20sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -202,8 +237,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/_8dp"
+            android:layout_marginEnd="@dimen/_8dp"
             android:layout_marginLeft="@dimen/_8dp"
             android:layout_marginRight="@dimen/_8dp"
+            android:layout_marginStart="@dimen/_8dp"
             android:layout_marginTop="@dimen/_8dp"
             android:text="Upload image"
             android:textColor="#AAffffff"
