--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -294,7 +294,9 @@
                 android:layout_marginTop="@dimen/_16dp"
                 app:layout_constraintLeft_toRightOf="@+id/image_gendar"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/v5" />
+                app:layout_constraintTop_toBottomOf="@+id/v5"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="@dimen/_8dp" />
 
         </android.support.constraint.ConstraintLayout>
 
