--- a/app/src/main/res/layout/item_in_bottom_hisprofile.xml
+++ b/app/src/main/res/layout/item_in_bottom_hisprofile.xml
@@ -66,11 +66,10 @@
         android:layout_width="0dp"
         android:layout_height="@dimen/_10dp"
         android:layout_marginBottom="0dp"
-        android:layout_marginLeft="@dimen/_8dp"
-        android:layout_marginRight="@dimen/_8dp"
+        android:layout_marginRight="@dimen/_16dp"
+        android:layout_marginEnd="@dimen/_16dp"
         android:layout_marginTop="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout10"
-        app:layout_constraintLeft_toRightOf="@+id/linearLayout10"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/linearLayout10"
         app:srcCompat="@drawable/rounded_rectangle_3_copy_3" />
