--- a/app/src/main/res/layout/item_in_send_message.xml
+++ b/app/src/main/res/layout/item_in_send_message.xml
@@ -24,9 +24,10 @@
         android:layout_height="@dimen/_50dp"
         android:layout_marginBottom="@dimen/_8dp"
         android:layout_marginRight="@dimen/_8dp"
+        android:layout_marginEnd="@dimen/_8dp"
         android:layout_marginTop="@dimen/_8dp"
         android:layout_weight="1"
-        android:visibility="invisible"
+        android:visibility="gone"
         android:src="@drawable/avatar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
