--- a/app/src/main/res/layout/activity_details_cause.xml
+++ b/app/src/main/res/layout/activity_details_cause.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:background="@drawable/bg"
+    tools:context="com.example.amr.sunbula.Activities.DetailsCauseActivity">
 
     <View
         android:id="@+id/view2"
@@ -13,6 +16,7 @@
         android:layout_marginRight="0dp"
         android:layout_marginTop="0dp"
         android:background="@color/tab_enable"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/btn_donate"
         app:layout_constraintLeft_toLeftOf="@+id/image_user_cause"
         app:layout_constraintRight_toRightOf="@+id/image_user_cause"
