--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,6 +11,7 @@
         android:id="@+id/list_item_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:dividerHeight="@dimen/_8dp"
         android:scrollbars="none" />
 
 </RelativeLayout>
