--- a/app/src/main/res/layout/item_in_bottom_hisprofile.xml
+++ b/app/src/main/res/layout/item_in_bottom_hisprofile.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/tab_enable">
 
     <View
         android:id="@+id/view3"
@@ -14,6 +14,7 @@
         android:layout_marginRight="0dp"
         android:layout_marginTop="0dp"
         android:background="#000000"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/image_message"
         app:layout_constraintLeft_toLeftOf="@+id/image_ellipse_3"
         app:layout_constraintRight_toRightOf="@+id/image_ellipse_3"
@@ -27,6 +28,7 @@
         android:layout_marginStart="@dimen/_8dp"
         android:layout_marginTop="@dimen/_8dp"
         android:src="@drawable/ellipse_3"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -63,11 +65,26 @@
 
     <ImageView
         android:id="@+id/image_switch"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/_10dp"
+        android:layout_width="@dimen/_25dp"
+        android:layout_height="@dimen/_25dp"
         android:layout_marginBottom="0dp"
-        android:layout_marginRight="@dimen/_16dp"
         android:layout_marginEnd="@dimen/_16dp"
+        android:layout_marginRight="@dimen/_16dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout10"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout10"
+        app:srcCompat="@drawable/rounded_rectangle_3_copy_3" />
+
+    <ImageView
+        android:id="@+id/image_switch2"
+        android:rotation="180"
+        android:visibility="gone"
+        android:layout_width="@dimen/_25dp"
+        android:layout_height="@dimen/_25dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginEnd="@dimen/_16dp"
+        android:layout_marginRight="@dimen/_16dp"
         android:layout_marginTop="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout10"
         app:layout_constraintRight_toRightOf="parent"
@@ -89,6 +106,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/message2" />
+        app:srcCompat="@drawable/close1" />
 
 </android.support.constraint.ConstraintLayout>
