--- a/app/src/main/res/layout/item_in_bottom_profile.xml
+++ b/app/src/main/res/layout/item_in_bottom_profile.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/tab_enable">
@@ -15,6 +14,7 @@
         android:layout_marginRight="0dp"
         android:layout_marginTop="0dp"
         android:background="#000000"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/image_close1"
         app:layout_constraintLeft_toLeftOf="@+id/image_ellipse_3"
         app:layout_constraintRight_toRightOf="@+id/image_ellipse_3"
@@ -28,6 +28,7 @@
         android:layout_marginStart="@dimen/_8dp"
         android:layout_marginTop="@dimen/_8dp"
         android:src="@drawable/ellipse_3"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -64,12 +65,27 @@
 
     <ImageView
         android:id="@+id/image_switch"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/_10dp"
+        android:layout_width="@dimen/_25dp"
+        android:layout_height="@dimen/_25dp"
         android:layout_marginBottom="0dp"
-        android:layout_marginRight="@dimen/_16dp"
         android:layout_marginEnd="@dimen/_16dp"
+        android:layout_marginRight="@dimen/_16dp"
         android:layout_marginTop="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout10"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout10"
+        app:srcCompat="@drawable/rounded_rectangle_3_copy_3" />
+
+    <ImageView
+        android:id="@+id/image_switch2"
+        android:rotation="180"
+        android:layout_width="@dimen/_25dp"
+        android:layout_height="@dimen/_25dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginEnd="@dimen/_16dp"
+        android:layout_marginRight="@dimen/_16dp"
+        android:layout_marginTop="0dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout10"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/linearLayout10"
@@ -114,8 +130,10 @@
         android:layout_width="@dimen/_25dp"
         android:layout_height="@dimen/_25dp"
         android:layout_marginBottom="0dp"
+        android:layout_marginEnd="@dimen/_8dp"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="@dimen/_8dp"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="@dimen/_16dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -129,15 +147,16 @@
         android:id="@+id/text_Completed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/_8dp"
+        android:layout_marginBottom="@dimen/_8dp"
+        android:layout_marginEnd="@dimen/_8dp"
         android:layout_marginRight="@dimen/_8dp"
         android:layout_marginTop="@dimen/_8dp"
         android:text="Completed"
         android:textColor="#000000"
         android:textSize="@dimen/_12sp"
         android:visibility="gone"
-        app:layout_constraintLeft_toRightOf="@+id/linearLayout10"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/image_switch2"
+        app:layout_constraintEnd_toStartOf="@+id/image_switch2"
+        app:layout_constraintTop_toTopOf="@+id/image_switch2" />
 
 </android.support.constraint.ConstraintLayout>
