--- a/app/src/main/res/layout/item_in_home.xml
+++ b/app/src/main/res/layout/item_in_home.xml
@@ -23,7 +23,7 @@
         android:layout_height="0dp"
         android:layout_marginBottom="0dp"
         android:layout_marginRight="0dp"
-        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
         android:layout_marginTop="0dp"
         android:background="@drawable/open_side"
         android:src="@drawable/download_right"
@@ -38,6 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="0dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="@dimen/_8dp"
         android:layout_marginRight="@dimen/_8dp"
         android:background="@drawable/title"
         android:gravity="center|left"
@@ -47,7 +49,7 @@
         android:paddingTop="@dimen/_10dp"
         android:text="hhhhhhhh"
         android:textAllCaps="false"
-        android:textSize="@dimen/_20sp"
+        android:textSize="@dimen/_16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
