--- a/app/src/main/res/layout/activity_make_review.xml
+++ b/app/src/main/res/layout/activity_make_review.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context="com.example.amr.sunbula.MakeReviewActivity">
+    tools:context="com.example.amr.sunbula.Activities.MakeReviewActivity">
 
     <TextView
         android:id="@+id/textView"
