--- a/app/src/main/res/layout/activity_search_causes__people.xml
+++ b/app/src/main/res/layout/activity_search_causes__people.xml
@@ -61,7 +61,7 @@
                 android:layout_marginEnd="@dimen/_8dp"
                 android:layout_marginRight="@dimen/_8dp"
                 android:layout_marginTop="@dimen/_8dp"
-                android:src="@android:drawable/ic_menu_set_as"
+                android:src="@android:drawable/ic_menu_sort_by_size"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
